--- a/src/style/PhoneConfirm.module.css
+++ b/src/style/PhoneConfirm.module.css
@@ -27,3 +27,53 @@
 .phoneConfirmContainer p span{
     font-weight: 500;
 }
+
+.btnBack{
+    position: absolute;
+    top:1em;
+    left: 1em;
+}
+.btnBack img{
+    width: 2em;
+}
+
+.notificationContainer{
+    border-radius: 1em;
+    background-color: #fff;
+    box-shadow: 0px 0px 5px #cccccc;
+}
+
+.notificationContainer h3{
+    font-size: 1em;
+    font-weight: 500;
+    color:#000000;
+    width: 100%;
+    margin: auto;
+    margin-bottom: 0.2em;
+}
+
+.notificationContainer p{
+    font-size: 0.875em;
+    font-weight: 500;
+    line-height: 1.3;
+    margin: auto;
+}
+
+.notificationContainer .action_btn a{
+    display: inline-block;
+    width: 50%;
+    padding: 0.5em;
+    border-top: 1px solid #cccccc;
+    color: var(--btnBgColor);
+}
+
+.notificationContainer .action_btn > a:first-child{
+    border-right: 1px solid #cccccc;
+}
+
+.notificationContainer .hand_icon{
+    position: absolute;
+    bottom: 170px;
+    right: 110px;
+    width: 60px;
+}
